登录功能已实现，存在中文编码问题导致无法使用中文名

--- a/ChatClient/ChatClient.vcxproj
+++ b/ChatClient/ChatClient.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="test.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
