--- a/ChatClient/ChatClient.vcxproj.filters
+++ b/ChatClient/ChatClient.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="utils.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils.h">
