--- a/ChatClient/ChatClient.vcxproj.filters
+++ b/ChatClient/ChatClient.vcxproj.filters
@@ -21,12 +21,15 @@
     <ClCompile Include="utils.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="ConfigReader.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ConfigReader.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
